--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather</title>
   </head>
   <body style="background-image: url(./images/4.png);" >
-    <div id="root" class="w-screen"></div>
+    <div id="root" class="w-max"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
